Non-unified build with LLD fails due to undefined AuxiliaryBarrier<JSC::Butterfly*> constructor https://bugs.webkit.org/show_bug.cgi?id=246515

Unreviewed build fix.

* Source/JavaScriptCore/wasm/js/WebAssemblyArrayPrototype.cpp: Add
  missing AuxiliaryBarrierInlines.h header inclusion.

Canonical link: https://commits.webkit.org/255536@main